# wez-sonos

./: Cargo.toml  LICENSE.md  Makefile  README.md
.github/workflows/: build.yml  fmt.yml
codegen/: Cargo.toml  extract-metadata.sh
codegen/src/: main.rs  schema.rs
data/: device_spec.xml  zone_group_state.xml
examples/: disco.rs  showq.rs  subscribe.rs
src/: didl.rs  discovery.rs  generated.rs  lib.rs  upnp.rs  xmlutil.rs  zone.rs
