[package]
name = "sonos"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.30"
instant-xml = "0.4.0"
log = "0.4.21"
reqwest = { version = "0.12.4", default-features = false }
ssdp-client = "2.0.0"
thiserror = "1.0.61"
url = "2.5.0"

[dev-dependencies]
env_logger = "0.11.3"
k9 = "0.12.0"
tokio = { version = "1.37.0", features = ["full"] }
